# ly_chat_server

./: .clang-format  .clang-tidy  .clangd  .cspell.json  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: cmake_configure.conf.in  (+1 more)
src/libs/: CMakeLists.txt
src/libs/common/: CMakeLists.txt
src/libs/common/include/common/: common_error_code.h  common_macros.h  constants.h  macros.h
src/libs/common/include/common/base/: singleton.h
src/libs/common/include/common/compiler/: attributes.h  feature.h  macros.h  warnings.h
src/libs/common/include/common/constants/: date_time_constants.h  filesystem_constants.h  logging_constants.h
src/libs/common/include/common/container/: blocking_queue.hpp  concurrent_blocking_queue.hpp  cstring.hpp
src/libs/common/include/common/debug/: assert.h  debug_level.h  debug_log.h  debug_logger.h  log.h  working_env.h
src/libs/common/include/common/types/: date_time_types.h  error_code_types.h  filesystem_types.h  log_level.h  logging_types.h  process_types.h  thread_types.h  time_common.h  type_traits.h
src/libs/common/include/common/utils/: date_time_utils.h  error_code_utils.h  file_writer.h  filesystem_utils.h  process_utils.h  string_utils.h  thread_utils.h
src/libs/common/src/: debug_log.cpp
src/libs/common/src/debug/: debug_log.cpp  debug_logger.cpp  debug_logger_inner.cpp  debug_logger_inner.h  working_env.cpp  working_env_c.c  working_env_c.h
src/libs/common/src/utils/: error_code_utils.cpp  process_utils.cpp  string_utils.c  string_utils.cpp
src/libs/common/src/utils/date_time/: date_time_utils.cpp  date_time_utils_string.cpp
src/libs/common/src/utils/filsystem/: file_writer.cpp  filesystem_utils.cpp  filesystem_utils_directory.cpp  filesystem_utils_file.cpp  filesystem_utils_internal.cpp  filesystem_utils_path.cpp
src/libs/include/common/base/: base_log.h  singleton_base.h
src/libs/include/common/file_system/: file_system.h  path.h
src/libs/include/common/time/: time.h
src/libs/include/config/: config_parser.h
src/libs/include/utils/: logger.h
src/libs/include/utils/logging/: logger.h
src/libs/logging/: CMakeLists.txt
src/libs/logging/include/logging/: appender.h  appender_factory.h  async_logger.h  formatter.h  log_basic_file_sink.h  log_console_sink.h  log_level.h  log_macros.h  log_record.h  log_sink.h  log_source.h  logger.h  logger.h.1  logger_factory.h  logging.h  logging_base.h  logging_c.h  logging_types.h  pattern_formatter.h
src/libs/logging/src/: async_logger.cpp  log_basic_file_sink.cpp  log_console_sink.cpp  log_level.cpp  log_record.cpp  log_sink.cpp  logger.cpp  logger111.cpp1  logging.cpp  logging_c.cpp
src/libs/logging/src/appender/: appender.cpp  console_appender.cpp
src/libs/logging/src/c/: common_c.cpp  common_c.h  formatter_st.cpp  instance_st.cpp  logger_st.cpp  logging_c.cpp  logging_level_c.cpp  logging_level_c.h  sink_st.cpp  task_pool_st.cpp
src/libs/logging/src/details/: log_msg.cpp  log_record.cpp  log_source.cpp  log_task_scheduler.cpp  log_thread_pool.cpp  registry.cpp  task_pool.cpp
src/libs/logging/src/formatter/: formatter.cpp  pattern_formatter.cpp
src/libs/logging/src/formatters/: pattern_formatter.cpp
src/libs/logging/src/internal/: console_appender.h  log_console_sink.h  log_record.h  log_sink_base.h  logging_internal.cpp  logging_internal.h
src/libs/logging/src/logger/: logger.cpp  logger_factory.cpp
src/libs/logging/src/sinks/: base_sink.cpp  basic_file_sink.cpp  console_sink.cpp  rotating_file_sink.cpp  sink.cpp  stdout_sink.cpp
src/libs/src/common/: CMakeLists.txt
src/libs/src/common/file_system/: file_system.cpp  path.cpp
src/libs/src/common/time/: time.cpp
src/libs/src/config/: CMakeLists.txt
src/libs/src/utils/: CMakeLists.txt
src/libs/src/utils/logging/: logger.cpp
src/libs/utils/: CMakeLists.txt
src/libs/utils/include/utils/: date_time_utils.h  file_writer.h  filesystem_utils.h  process_utils.h  string_utils.h  thread_utils.h  time_utils.h  utils_error_code.h
src/libs/utils/src/: process_utils.cpp  string_utils.cpp
src/libs/utils/src/date_time/: date_time_utils.cpp  date_time_utils_string.cpp
src/libs/utils/src/filsystem/: file_writer.cpp  filesystem_utils.cpp  filesystem_utils_directory.cpp  filesystem_utils_file.cpp  filesystem_utils_internal.cpp  filesystem_utils_path.cpp
src/libs/utils/src/platform/: CMakeLists.txt  filesystem_utils.cpp  time_utils.cpp
src/libs/utils/src/thread/: thread_utils.cpp
src/server/: CMakeLists.txt  server_main.cpp
src/tests/: CMakeLists.txt  tese_main.cpp  test_main.cpp
src/tests/test_container/: test_blocking_queue.cpp  test_concurrent_blocking_queue_mt.cpp  test_concurrent_blocking_queue_st.cpp  test_cstring.cpp
src/tests/test_logging/: log_msg_container_sink.cpp  log_msg_container_sink.h  mock_sink.h  test_async_logger.cpp  test_basic_file_sink.cpp  test_logger.cpp  test_logging.cpp  test_logging_api.cpp  test_logging_c.cpp  test_pattern_formatter.cpp  test_root_logger.cpp  test_rotating_file_sink.cpp
src/tests/test_logging/test_logging_utils/: common.cpp  common.h  log_content_buffer_sink.cpp  log_content_buffer_sink.h  tid_msg_map_sink.h
src/tests/test_logging/test_utils/: common.cpp  common.h  log_content_buffer_sink.cpp  log_content_buffer_sink.h  tid_msg_map_sink.cpp
src/tests/test_utils/: test_date_time_utils.cpp  test_date_time_utils_common.cpp  test_date_time_utils_common.h  test_date_time_utils_string_time_comp.cpp  test_date_time_utils_string_time_stamp.cpp  test_logger.cpp  test_time_string_utils.cpp
src/tests/test_utils/test_date_time_utils/: test_date_time_utils.cpp  test_date_time_utils_common.cpp  test_date_time_utils_common.h  test_date_time_utils_string_time_comp.cpp  test_date_time_utils_string_time_stamp.cpp  test_date_time_utils_string_timestamp.cpp
src/tests/test_utils/test_filesystem_utils/: test_file_writer.cpp  test_filesystem_utils.cpp  test_filesystem_utils_base.h  test_filesystem_utils_dir.cpp  test_filesystem_utils_file.cpp  test_filesystem_utils_path.cpp
src/tests/test_utils/test_thread_utils/: test_thread_utils.cpp
(+80 files in other folders)
